<resources>
    <string name="app_name">Hello Games</string>
    <string name="game_info">Game Info</string>
    <string name="name">Name:</string>
    <string name="type">Type:</string>
    <string name="nb_players">Nb players:</string>
    <string name="year">Year:</string>
    <string name="do_you_want_to_know_more">DO YOU WANT TO KNOW MORE?</string>
    <string name="todo">TODO</string>
</resources>
