<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/game_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TitleText" android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:textColor="@android:color/holo_blue_bright" android:textStyle="bold" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/GameIMG"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/TitleText" android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/NameText" app:layout_constraintStart_toEndOf="@+id/GameIMG"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/TitleText" android:textColor="@android:color/black"
            android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/NameValue"
            app:layout_constraintTop_toTopOf="@+id/NameText" app:layout_constraintBottom_toBottomOf="@+id/NameText"
            app:layout_constraintStart_toEndOf="@+id/NameText" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/type"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/TypeText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/NameText"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/GameIMG" android:textStyle="bold"
            android:textColor="@android:color/black"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TypeValue"
            app:layout_constraintStart_toEndOf="@+id/TypeText" app:layout_constraintBottom_toBottomOf="@+id/TypeText"
            android:layout_marginBottom="8dp" app:layout_constraintTop_toTopOf="@+id/TypeText"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/nb_players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/NbPlayerText" app:layout_constraintStart_toEndOf="@+id/GameIMG"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/TypeText" android:textColor="@android:color/black"
            android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/NbPlayerValue" app:layout_constraintStart_toEndOf="@+id/NbPlayerText"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/NbPlayerText" app:layout_constraintBottom_toBottomOf="@+id/NbPlayerText"/>
    <TextView
            android:text="@string/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/YearText" app:layout_constraintStart_toEndOf="@+id/GameIMG"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/NbPlayerText" android:textStyle="bold"
            android:textColor="@android:color/black"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/YearValue"
            app:layout_constraintBottom_toBottomOf="@+id/YearText" app:layout_constraintTop_toTopOf="@+id/YearText"
            app:layout_constraintStart_toEndOf="@+id/YearText" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:layout_width="353dp"
            android:layout_height="225dp"
            android:id="@+id/DescriptionValue" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/GameIMG"/>
    <Button
            android:text="@string/do_you_want_to_know_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/knowMoreButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/DescriptionValue" android:textStyle="bold"/>
</android.support.constraint.ConstraintLayout>